20010916
 - (djm) Workaround XFree breakage in RPM spec file

20010915
 - (djm) Make do_pre_login static to avoid prototype #ifdef hell
 - (djm) Sync scard/ stuff
 - (djm) Redhat spec file cleanups from Pekka Savola <pekkas@netcore.fi> and
   Redhat
 - (djm) Redhat initscript config sanity checking from Pekka Savola 
   <pekkas@netcore.fi>
 - (djm) Clear supplemental groups at sshd start to prevent them from 
   being propogated to random PAM modules. Based on patch from Redhat via
   Pekka Savola <pekkas@netcore.fi>
 - (djm) Make sure rijndael.c picks config.h
 - (djm) Ensure that u_char gets defined

20010914
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/09/13
     [rijndael.c rijndael.h]
     missing $OpenBSD
   - markus@cvs.openbsd.org 2001/09/14
     [session.c]
     command=xxx overwrites subsystems, too
   - markus@cvs.openbsd.org 2001/09/14
     [sshd.c]
     typo

20010913
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/08/23 11:31:59
     [cipher.c cipher.h]
     switch to the optimised AES reference code from
     http://www.esat.kuleuven.ac.be/~rijmen/rijndael/rijndael-fst-3.0.zip

20010912
 - (bal) OpenBSD CVS Sync
   - jakob@cvs.openbsd.org 2001/08/16 19:18:34
     [servconf.c servconf.h session.c sshd.8]
     deprecate CheckMail. ok markus@
   - stevesk@cvs.openbsd.org 2001/08/16 20:14:57
     [ssh.1 sshd.8]
     document case sensitivity for ssh, sshd and key file
     options and arguments; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/17 18:59:47
     [servconf.h]
     typo in comment
   - stevesk@cvs.openbsd.org 2001/08/21 21:47:42
     [ssh.1 sshd.8]
     minor typos and cleanup
   - stevesk@cvs.openbsd.org 2001/08/22 16:21:21
     [ssh.1]
     hostname not optional; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/22 16:30:02
     [sshd.8]
     no rexd; ok markus@
   - stevesk@cvs.openbsd.org 2001/08/22 17:45:16
     [ssh.1]
     document cipher des for protocol 1; ok deraadt@